fixed gap in drop container

--- a/src/components/DropDown/DropDown.css
+++ b/src/components/DropDown/DropDown.css
@@ -6,7 +6,7 @@
     background-color: #5FDD97;
     display: grid;
     align-items: center;
-    top: 6%;
+    top: 47px;
     left: 0;
     transition: 0.8s ease-in-out;
 }
